<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">WebApps</string>
    <string name="menu_site">Change Site</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_text_size">Font Size</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_toggle_image">Toggle Images</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_3rd_party">3rd party domains</string>
    <string name="menu_open_url">Open URL</string>
    <string name="menu_save">Save as Webapp</string>
    <string name="menu_share">Share URL</string>
    <string name="menu_shortcut">Homescreen shortcut</string>
    <string name="menu_user_agent">User Agent</string>
    <string name="menu_certificate">Certificate</string>

    <string name="open_url_hint">site.com</string>
    <string name="open_url">Open URL</string>
    <string name="err_invalid_url">Invalid URL</string>

    <string name="blocked_root_domains">Unblock 3rd party domains</string>
    <string name="unblock">Unblock</string>
    <string name="title_save_webapp">Save Webapp</string>
    <string name="msg_save_webapp">Save current site as a Webapp?</string>
    <string name="msg_saving_webapp">Saving webapp</string>
    <string name="msg_shortcut_added">Shortcut added</string>
    <string name="btn_save">Save</string>
    <string name="webapp_name">Webapp Name</string>
    <string name="open_site">Open Site</string>
    <string name="btn_recommended_sites">Recommended</string>
    <string name="delete_webapp">Delete Webapp?</string>
    <string name="shortcut_label">Webapp shortcut</string>
    <string name="err_webapp_not_found">Webapp not found</string>
    <string name="title_open_with">Open With</string>

    <string name="title_certificate">Website Certificate</string>
    <string name="title_cert_untrusted">Untrusted Certificate</string>
    <string name="title_cert_changed">Certificate Changed</string>
    <string name="cert_accept">Accept Certificate</string>

    <string name="action_tips">Tips</string>
    <string name="tips"><![CDATA[
        <p><b>Adding web apps</b>: to add a new web app, open the site, then click the "Save as Webapp" action</p>
        <p><b>3rd party domains</b>: if a site looks broken, try enabling some 3rd party domains that the site may rely on, e.g. <i>fbcdn.net</i> for <i>Facebook</i></p>
        <p><b>Homescreen shortcuts</b>: Long-press your homescreen and access the widgets page to add a webapp shortcut to your homescreen</p>
        <p><b>Long-press links</b>: Long-press a link on a website to be able to choose how to open it</p>
]]></string>

    <string name="toast_images_enabled">Image loading enabled</string>
    <string name="toast_images_disabled">Image loading disabled</string>
    <string name="progress_opening_site">Opening web app...</string>

    <!-- Preferences activity strings -->
    <string name="title_3rd_party">Block 3rd party requests</string>
    <string name="summary_3rd_party">Don\'t load images/scripts outside webapps domains</string>
    <string name="title_font_size">Font Size</string>
    <string name="summary_font_size">Change the rendered font size</string>
    <string name="title_user_agent">User Agent</string>
    <string name="summary_user_agent">Affects how sites render on your device</string>
    <string name="title_fullscreen">Fullscreen</string>
    <string name="summary_fullscreen">Hide the status bar and use all screen space (requires restart)</string>
    <string name="title_autohide">Auto-hide action bar</string>
    <string name="summary_autohide">Hide the action bar when you scroll down, reveal when you scroll up</string>
    <string name="title_hide_actionbar">Hide actionbar</string>
    <string name="summary_hide_actionbar">Remove the actionbar completely. Long-press a blank spot to toggle.</string>
    <string name="title_shortcut_actionbar">Hide only for shortcuts</string>
    <string name="summary_shortcut_actionbar">Only hide the actionbar when launched from a shortcut</string>
</resources>
